# GNUSQL

./: README.md
gnusql-0.7b6.0/: BUGS  ChangeLog  INSTALL  Makefile.in  PROBLEMS  README  config.h.in  configure.in  make-dist  stamp-h.in  version
gnusql-0.7b6.0/etc/: MACHINES  Makefile.in  Tdeps  Tdeps.in  ansi2knr-sh  ansi2knr-sh.in  ask.texi  boot  boot.in  conf-templ  dq  gnu.texi  gsqlc.1  gss  gss-2  gss.texi  make-util.in  move-if-change  preserve  preserve.in  rpcgen-sh
gnusql-0.7b6.0/src/: Makefile.in  Makefile_h.in
gnusql-0.7b6.0/src/comp-lib/: Makefile.in  catfun.c  copy.c  db_cre_cli.c  db_cre_ser.c  finadm.c  index.h  lib1.c  libfunc1.c  runadm.c
gnusql-0.7b6.0/src/engine/: Makefile.in  adm.c  admdef.h  chpars.c  dispatch.c  dispatch.h.preserve  dispatch.x  dispatch_clnt.c.preserve  dispatch_svc.c.preserve  dispatch_xdr.c.preserve  dyngspar.h  engine_svc.c  gspstr.h  prepup.c
gnusql-0.7b6.0/src/engine/buf/: Makefile.in  buf.c  bufdefs.h  bufipc.c  buflock.c  fdeclbuf.h  get_put.c  page.c  queue.c
gnusql-0.7b6.0/src/engine/jour/: Makefile.in  fdecllj.h  fdeclmj.h  helpfu.c  ljipc.c  logj.c  microj.c  mjipc.c
gnusql-0.7b6.0/src/engine/rcvutl/: Makefile.in  fdclrcv.h  libini.c  librcv.c  memcr.c  puprcv.h  strgcr.c
gnusql-0.7b6.0/src/engine/synch/: Makefile.in  dessnch.h  dlock.c  fdclsyn.h  incrs.c  lock.c  sctpsyn.h  shartest.c  shtest1.c  snipc.c  synpr.c  unlock.c
gnusql-0.7b6.0/src/engine/trans/: Makefile.in  addflds.c  aggravg.c  aggrifn.c  aggrsfn.c  bdunion.c  blfltr.c  cmpftn.c  cmpkey.c  cmpkeys.c  cntrid.c  cnttab.c  crind.c  crrel.c  crtfrm.c  delcon.c  delind.c  delrel.c  dessrt.h  dltn.c  empty_page.c  extsrt.c  fdclsrt.h  fltrel.c  ind_ins.c  ind_rem.c  ind_scan.c  inscon.c  insfltr.c  insrtn.c  join.c  keyfrm.c  libtran.c  makegr.c  mdfctn.c  modcon.c  next.c  obrind.c  opinpg.c  opscfl.c  (+22 more)
gnusql-0.7b6.0/src/include/: Makefile.in  cl_lib.h  conn_handler.h  const.h  cycler.h  dyn_funcs.h  errors.h  exti.h  funall.h  global.h  inprtyp.h  kitty.h  options.def  pr_glob.h  setup_os.h  sql.h  sql_decl.h  sql_type.def  sql_type.h  svr_lib.h  tree_gen.h  type.h  type_lib.h  typecpi.h  typeif.h  typepf.h  typepi.h  vmemory.h  xmem.h
gnusql-0.7b6.0/src/include/engine/: Makefile.in  adfstr.h  agrflg.h  deftr.h  destrn.h  expop.h  f1f2decl.h  fdcltrn.h  fieldtp.h  inpop.h  pupsi.h  sctp.h  strml.h  totdecl.h  tptrn.h
gnusql-0.7b6.0/src/interpr/: Makefile.in  int_cli.c  int_servlib.c  interpr.c  intlib.c
gnusql-0.7b6.0/src/kitty/: Makefile.in  compare.c  conv.c  gen.c  kitty.c  node.c
gnusql-0.7b6.0/src/main/: Makefile.in  cs_link.c  dyn_client.c  dyn_funcs.c  gsql_cli.c  gsqltrn.h.preserve  gsqltrn.x  gsqltrn_clnt.c.preserve  gsqltrn_lib.c  gsqltrn_svc.c.preserve  gsqltrn_tbl.i.preserve  include_svc.c  options.c  sc.c  servlib.c
gnusql-0.7b6.0/src/opt/: Makefile.in  cnf.k  get_up.k  groupby.k  insert.k  opt.h  optimize.k  optutil.k  sorter.k  update.k
gnusql-0.7b6.0/src/other/: Makefile.in  a2k_p1.l  check_tp.c  cl_lib.c  conn_handler.c  sql_decl.c  sql_type.c  svr_lib.c  type_lib.c  vmemory.c  xmem.c
gnusql-0.7b6.0/src/parse/: Makefile.in  gsqlmon.c.preserve  gsqlmon.l  parse.c.preserve  parse.h.preserve  parse.y  procname.h  scan_c.c.preserve  scan_c.l  scan_s.c.preserve  scan_s.l
gnusql-0.7b6.0/src/semantic/: Makefile.in  access.c  binding.k  seman.h
gnusql-0.7b6.0/src/synthes/: Makefile.in  codegen.c  moddump.c  optim.c  repack.c  struct.c  syndef.h  synlib.c
gnusql-0.7b6.0/src/trl/: Makefile.in  cycler.c  liter.c  liter.h  tassert.h  tree_gen.c  treecode.def  treeflag.def  trl.c  trl.h  trl_dump.c  trl_macro.h  trlinter.h  vcblib.c  vcblib.h
gnusql-0.7b6.0/test/: IS.txt  Makefile.in  README  log.2  test10.ec  test11.ec  test12.ec  test13.ec  test14.ec  test15.ec  test16.ec  test20.ec  test21.ec  test22.ec  test23.ec  test24.ec  test25.ec  test26.ec  test30.ec  test31.ec  test33.ec  test3a.ec  test3b.ec  test3c.ec  test40.ec  test41.ec  test42.ec  test50.ec  test51.ec  test70.ec  test80.ec  testA1.ec  testIS0.sql  testIS3.sql  testIS4.sql  testIS5.sql  testIS8.sql  testM0.sql  testM1.ec  testM1a.ec  (+21 more)
gnusql-0.7b6.1/: ChangeLog  GETTING.GNU.SOFTWARE  INSTALL  Makefile  Makefile.in  PROBLEMS  README  acconfig.h  config.cache  config.status  configure  configure.in  make-dist  stamp-h.in  version
gnusql-0.7b6.1/etc/: FTP  Makefile  Makefile.in  Tdeps  Tdeps.in  arc  arc.in  ask.texi  boot  boot.in  conf-templ  dq.in  gnu.texi  gsqls.1  gss-1  gss.texi  make-util  make-util.in  move-if-change.in  rpcgen-sh  rpcgen-sh.in  rr  ss
gnusql-0.7b6.1/src/: Makefile  Makefile.in  Makefile_h  Makefile_h.in
gnusql-0.7b6.1/src/comp-lib/: Makefile  Makefile.in  catfun.c  copy.c  db_cre_cli.c  db_cre_ser.c  finadm.c  index.h  lib1.c  libfunc1.c  runadm.c
gnusql-0.7b6.1/src/engine/: Makefile  Makefile.in  adm.c  admdef.h  chpars.c  dispatch.c  dispatch.h.preserve  dispatch.x  dispatch_clnt.c  dispatch_svc.c  dispatch_svc.c.preserve  dispatch_tbl.i  dispatch_tbl.i.preserve  dispatch_xdr.c  dyngspar.h  gspstr.h  prepup.c
gnusql-0.7b6.1/src/include/: Makefile  Makefile.in  cl_lib.h  config.h  const.h  cycler.h  dyn_funcs.h  errors.h  exti.h  funall.h  global.h  gsqltrn.h  inprtyp.h  kitty.h  options.def  pr_glob.h  setup_os.h  sql.h  sql_decl.h  sql_type.def  sql_type.h  svr_lib.h  tree_gen.h  type.h  type_lib.h  typecpi.h  typeif.h  typepi.h  vmemory.h  xmem.h
gnusql-0.7b6.1/src/interpr/: Makefile  Makefile.in  int_cli.c  int_servlib.c  interpr.c  intlib.c
gnusql-0.7b6.1/src/kitty/: Makefile  Makefile.in  compare.c  gen.c  (+3 more)
gnusql-0.7b6.1/templates/: postconf
gnusql-0.7b6.1/test/: Makefile  Makefile.in  test10.ec  test11.ec  test12.ec  test13.ec  test14.ec  test15.ec  test16.ec  test20.ec  test21.ec  test22.ec  test23.ec  test24.ec  test25.ec  test26.ec  test30.ec  test31.ec  test33.ec  test3a.ec  test3b.ec  test3c.ec  test40.ec  test41.ec  test42.ec  test50.ec  test51.ec  test60.sql  test70.ec  test80.ec  testA0.sql  testFLdef.sql  testFLins.sql  testIS1.sql  testIS2.sql  testIS6.sql  testIS7.sql  testM1.ec  testM1a.ec  testM2.ec  (+19 more)
(+202 files in other folders)
